# final-group08

./: .gitignore  CITATION.cff  LICENSE  Makefile  Makefile-BACKUP  README-FYEO.md  README.md  ai_documentation.txt  contribution_statement.md  environment-BASIC.yml  environment.yml  myst.datasets.bib  myst.doi.bib  myst.yml  postBuild  pyproject.toml
data/02_vectorized/: preprocessor.joblib  test.joblib  train.joblib
misc/: Makefile-BACKUP-01  environment-BASIC-01.yml
notebooks/: main.ipynb  main.py  step00_utils.ipynb  step00_utils.py  step01_data.ipynb  step01_data.py  step02_eda.ipynb  step02_eda.py  step03_features.ipynb  step03_features.py  step04_modeling.ipynb  step04_modeling.py  step05_interpret.ipynb  step05_interpret.py  step05_main.ipynb  step05_main.py
src/: main.py  step00_utils.py  step01_data.py  step03_features.py  step05_interpret.py
tests/: test_step00_utils.py  test_step01_data.py  test_step05_main.py
