[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "final-group08"
version = "0.1.0"
authors = [
  { name="Your Name", email="author@example.com" },
]
description = "A Python library for the Final Project by Group 08 on Churn Analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/UCB-stat-159-f25/final-group08"
Issues = "https://github.com/UCB-stat-159-f25/final-group08/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "notebooks*", "tests*"]